--- a/_posts/2020-04-10-스트라센 알고리즘.markdown
+++ b/_posts/2020-04-10-스트라센 알고리즘.markdown
@@ -1,69 +1,10 @@
 ---
 layout: single
-title:  "스트라센 알고리즘"
+title:  "Strassen Algotithm"
 date:   2020-04-10 20:39:08 +0900
 categories: jekyll update
 use_math: true
 ---
-# 스트라센 알고리즘
-
-- 스트라센 알고리즘이란?
-
-   독일의 수학자 폴커  슈트라센이 개발한 행렬 곱셈 알고리즘
-
-
-
-
-$$
-A=\begin{pmatrix}
-a_1&a_2 \\
-a_3 & a_4
-\end{pmatrix}   ,B =\begin{pmatrix}
-b_1&b_2 \\
-b_3 & b_4
-\end{pmatrix}, C=\begin{pmatrix}
-c_1&c_2 \\
-c_3 & c_4
-\end{pmatrix}
-$$
-
-
-​                          -2nX2n형식이 아닐경우 빈칸을 0으로 채워 2nX2n 형식으로 만든다.
-
-AXB = C 라고 나타낼 때
-
-D = ($$a_1$$+$$a_4$$ )($$b_1$$+$$b_2$$)
-
-E = ($$a_3$$+$$a_4$$)$$b_1$$  
-
-F = $$a_1$$($$b_2$$-$$b_4$$)
-
-G = $$a_4$$($$b_3$$-$$b_1$$)
-
-H =($$a_1$$+$$a_2$$)$$b_4$$ 
-
-I = ($$a_3$$-$$a_1$$)($$b_1$$+$$b_2$$)
-
-J = ($$a_2$$-$$a_4$$)($$b_3$$+$$b_4$$)
-
-이에 따른 행렬C의 원소값은
-
-$$c_1$$ = D+G-H+J
-
-$$c_2$$ = F+H
-
-$$c_3$$ = E+G
-
-$$c_4$$ = D+F-E+I 
-
-- 스트라센 알고리즘 장단점 
-
-  장점: 시간 복잡도가 기존의 행렬 곱셈보다 작다.
-
-  단점: D,E,F,G,H,I,J 자리가 필요하므로 만약 D,E,F,G,H,I,J 의 크기가 클 경우  자리를 많이 차지하게 된다.
-
-
-
 
 
 <h1>Strassen Algotithm</h1>
