--- a/_posts/2020-04-10-스트라센 알고리즘.markdown
+++ b/_posts/2020-04-10-스트라센 알고리즘.markdown
@@ -23,7 +23,7 @@ use_math: true
 
 
 $$
-\begin{pmatrix}C11 & C12 \\C21 & C22 \end{pmatrix}=\begin{pmatrix}A11 & A12 \\A21 & A22 \end{pmatrix}*\begin{pmatrix}B11 & B12 \\B21 & B22 \end{pmatrix}
+\begin{bmatrix}C11 & C12 \\C21 & C22 \end{bmatrix}=\begin{bmatrix}A11 & A12 \\A21 & A22 \end{bmatrix}*\begin{bmatrix}B11 & B12 \\B21 & B22 \end{bmatrix}
 $$
 
 $$
